Media | Prevent text overflow

--- a/src/scss/components/media/_base.scss
+++ b/src/scss/components/media/_base.scss
@@ -1,3 +1,11 @@
+.Media {
+  display: flex;
+}
+
+.Media-img {
+  flex-shrink: 0;
+}
+
 .Media-img,
 .Media-content {
   display: inline-block;
